[package]
name = "simple-ssr-rs"
version = "0.2.1"
edition = "2021"
description = "A simple static web pages renderer on server-side"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/xmh0511/simple-ssr-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["macros"] }
salvo = {version="0.66.2", features=["serve-static","anyhow"]}
tera = "1.19.1"
serde_json = "1.0.115"
anyhow="1.0.81"

[features]
http3 = ["salvo/quinn"]
